try to solve overflowing VH bug on real phone

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -3,7 +3,7 @@
 html,
 body,
 #root {
-  height: 100%;
+  height: var(--app-height);
 }
 
 #root {
